Mon Jan 11 13:18:37 1999  Tim Janik  <timj@gtk.org>

	* gtk/gtkwindow.c:
	(gtk_window_key_release_event): 
	(gtk_window_key_press_event): only pass key events to the focus widget
	if it is sensitive.

	* gtk/gtkmenuitem.c (gtk_menu_item_select_timeout): don't popup the
	submenu if it isn't sensitive.
	(gtk_menu_item_paint): state_type doesn't need to be reset to
	GTK_STATE_INSENSITIVE if the widget is insensitive anyways.

	* gtk/gtkcontainer.c (gtk_container_real_focus): 
	* gtk/gtklist.c (gtk_list_focus): 
	* gtk/gtkmenushell.c (gtk_menu_shell_move_selected): 
	* gtk/gtknotebook.c (gtk_notebook_focus): 
	s/GTK_WIDGET_SENSITIVE/GTK_WIDGET_IS_SENSITIVE/ since a widgets
	sensitivity is determined through the parent as well,
	GTK_WIDGET_SENSITIVE is only of interest inside gtkwidget.c, everywhere
	else GTK_WIDGET_IS_SENSITIVE (widget) needs to be used to check for
	sensitivity.

	* gtk/gtkaccelgroup.c (gtk_accel_group_activate): don't activate
	object if it is an insensitive widget.

Mon, 11 Jan 1999 08:09:08 +0100 Paolo Molaro <lupus@debian.org>

	* gtk/gtktypeutils.[ch]: add gtk_type_{add,remove}_creation_hook().
	You can have a notification when a type is created.

1999-01-11  Tim Janik  <timj@gtk.org>

	* gtk/gtkmain.c (gtk_propagate_event): added an assertement.

Sun Jan 10 14:45:37 1999  Owen Taylor  <otaylor@gtk.org>

	* gtk/gtktext.c (text_properties_equal): Fixed
	cut and paste bug when comparing text property
	bg colors.
	[ Matt Aubury <Matt.Aubury@comlab.ox.ac.uk> ]

1999-01-10  Tim Janik  <timj@gtk.org>

	* gtk/gtksignal.c (gtk_signal_lookup): if the lookup failed, try
	to initialize the object class and reattempt the lookup, reported
	by Paolo Molaro <lupus@lettere.unipd.it>.

Sat Jan  9 17:36:20 1999  Owen Taylor  <otaylor@redhat.com>

	* configure.in (ALL_LINGUAS): Added cs to ALL_LINGUAS.

Sat Jan  9 17:27:49 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c (gtk_file_selection_populate):
	Mark another string for internationalization.